--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="score_label">Score</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_button">Menu</string>
+    <string name="menu_title">Two Player Shooter</string>
+    <string name="play_button">Play</string>
+    <string name="high_scores_button">High Scores</string>
 </resources>
